@@ -1157,17 +1157,6 @@ literal|27
 case|:
 if|if
 condition|(
-operator|(
-literal|0x84002f0600000000L
-operator|&
-name|l
-operator|)
-operator|==
-literal|0L
-condition|)
-break|break;
-if|if
-condition|(
 name|kind
 operator|>
 literal|21
@@ -1253,17 +1242,6 @@ literal|31
 case|:
 if|if
 condition|(
-operator|(
-literal|0x84002f0600000000L
-operator|&
-name|l
-operator|)
-operator|==
-literal|0L
-condition|)
-break|break;
-if|if
-condition|(
 name|kind
 operator|>
 literal|18
@@ -1304,16 +1282,6 @@ break|break;
 case|case
 literal|34
 case|:
-if|if
-condition|(
-operator|(
-literal|0x84002f0600000000L
-operator|&
-name|l
-operator|)
-operator|!=
-literal|0L
-condition|)
 name|jjCheckNAddStates
 argument_list|(
 literal|10
@@ -1372,7 +1340,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1398,6 +1366,7 @@ literal|26
 argument_list|)
 expr_stmt|;
 block|}
+elseif|else
 if|if
 condition|(
 name|curChar
@@ -1418,7 +1387,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1449,6 +1418,20 @@ if|if
 condition|(
 name|curChar
 operator|==
+literal|92
+condition|)
+name|jjCheckNAddStates
+argument_list|(
+literal|13
+argument_list|,
+literal|15
+argument_list|)
+expr_stmt|;
+elseif|else
+if|if
+condition|(
+name|curChar
+operator|==
 literal|126
 condition|)
 block|{
@@ -1474,7 +1457,7 @@ block|}
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1500,20 +1483,6 @@ literal|26
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|curChar
-operator|==
-literal|92
-condition|)
-name|jjCheckNAddStates
-argument_list|(
-literal|13
-argument_list|,
-literal|15
-argument_list|)
-expr_stmt|;
-elseif|else
 if|if
 condition|(
 name|curChar
@@ -1818,7 +1787,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1850,7 +1819,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1898,17 +1867,6 @@ literal|27
 case|:
 if|if
 condition|(
-operator|(
-literal|0x6800000078000000L
-operator|&
-name|l
-operator|)
-operator|==
-literal|0L
-condition|)
-break|break;
-if|if
-condition|(
 name|kind
 operator|>
 literal|21
@@ -1931,7 +1889,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -1963,7 +1921,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -2011,17 +1969,6 @@ literal|31
 case|:
 if|if
 condition|(
-operator|(
-literal|0x6800000078000000L
-operator|&
-name|l
-operator|)
-operator|==
-literal|0L
-condition|)
-break|break;
-if|if
-condition|(
 name|kind
 operator|>
 literal|18
@@ -2044,7 +1991,7 @@ case|:
 if|if
 condition|(
 operator|(
-literal|0x97ffffff97ffffffL
+literal|0x97ffffff87ffffffL
 operator|&
 name|l
 operator|)
@@ -2079,16 +2026,6 @@ break|break;
 case|case
 literal|34
 case|:
-if|if
-condition|(
-operator|(
-literal|0x6800000078000000L
-operator|&
-name|l
-operator|)
-operator|!=
-literal|0L
-condition|)
 name|jjCheckNAddStates
 argument_list|(
 literal|10
@@ -2198,6 +2135,9 @@ literal|36
 case|:
 case|case
 literal|25
+case|:
+case|case
+literal|27
 case|:
 if|if
 condition|(
@@ -2411,6 +2351,9 @@ break|break;
 case|case
 literal|29
 case|:
+case|case
+literal|31
+case|:
 if|if
 condition|(
 operator|!
@@ -2448,6 +2391,9 @@ expr_stmt|;
 break|break;
 case|case
 literal|32
+case|:
+case|case
+literal|34
 case|:
 if|if
 condition|(
